--- a/src/client/index.ejs
+++ b/src/client/index.ejs
@@ -6,7 +6,7 @@
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <body>
         <div class="container">
