--- a/src/client/index.ejs
+++ b/src/client/index.ejs
@@ -6,7 +6,8 @@
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <body>
         <div class="container">
