--- a/src/client/index.ejs
+++ b/src/client/index.ejs
@@ -3,9 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>
-        <%= htmlWebpackPlugin.options.title %>
-    </title>
+    <title>Prism</title>
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,6 +14,16 @@
     <% if(process.env.NODE_ENV === 'production') { %>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.7.0/umd/react.production.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.7.0/umd/react-dom.production.min.js"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137162211-1"></script>
+        <% if (process.env.ORBS_VIRTUAL_CHAIN_ID) { %>
+            <script>
+                window.dataLayer = window.dataLayer || [];
+                function gtag(){dataLayer.push(arguments);}
+                gtag('js', new Date());
+                gtag('config', '<%= ORBS_VIRTUAL_CHAIN_ID %>');
+            </script>
+        <% } %>
     <% } else { %>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.7.0/umd/react.development.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.7.0/umd/react-dom.development.js"></script>
