--- a/views/page.ejs
+++ b/views/page.ejs
@@ -17,7 +17,7 @@
         
         <% if (process.env.GOOGLE_ANALYTICS_KEY) { %>
             <!-- Global site tag (gtag.js) - Google Analytics -->
-            <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137162211-1"></script>
+            <script async src="https://www.googletagmanager.com/gtag/js?id=<%= GOOGLE_ANALYTICS_KEY %>"></script>
             <script>
                 window.dataLayer = window.dataLayer || [];
                 function gtag(){dataLayer.push(arguments);}
