--- a/views/page.ejs
+++ b/views/page.ejs
@@ -17,12 +17,12 @@
         
         <% if (process.env.GOOGLE_ANALYTICS_KEY) { %>
             <!-- Global site tag (gtag.js) - Google Analytics -->
-            <script async src="https://www.googletagmanager.com/gtag/js?id=<%= GOOGLE_ANALYTICS_KEY %>"></script>
+            <script async src="https://www.googletagmanager.com/gtag/js?id=<%= process.env.GOOGLE_ANALYTICS_KEY %>"></script>
             <script>
                 window.dataLayer = window.dataLayer || [];
                 function gtag(){dataLayer.push(arguments);}
                 gtag('js', new Date());
-                gtag('config', '<%= GOOGLE_ANALYTICS_KEY %>');
+                gtag('config', '<%= process.env.GOOGLE_ANALYTICS_KEY %>');
             </script>
         <% } %>
     <% } else { %>
