--- a/views/page.ejs
+++ b/views/page.ejs
@@ -29,7 +29,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.7.0/umd/react.development.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.7.0/umd/react-dom.development.js"></script>
     <% } %>
-		<script type="text/javascript" src="<%- manifest["vendors.js"] %>"></script>
-		<script type="text/javascript" src="<%- manifest["main.js"] %>"></script>
+		<script type="text/javascript" src="<%- manifest['vendors.js'] %>"></script>
+		<script type="text/javascript" src="<%- manifest['main.js'] %>"></script>
 </body>
 </html>
