--- a/views/page.ejs
+++ b/views/page.ejs
@@ -7,6 +7,9 @@
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script>
+        var vchainId = <%- vchainId %>;
+    </script>
     <body>
         <div class="container">
             <div id="app">Loading...</div>
