--- a/views/page.ejs
+++ b/views/page.ejs
@@ -6,6 +6,7 @@
     <title>Prism</title>
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/assets/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script>
         var vchainId = <%- vchainId %>;
