Working with block height instead of block hash

--- a/views/vchain-404.ejs
+++ b/views/vchain-404.ejs
@@ -8,6 +8,6 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <body>
-    <h4>VChain not found</h4>
+    <h4>VChain "<%- vchainId %>" not found</h4>
 </body>
 </html>
