Added version to the UI (Taking from the package.json)

--- a/views/page.ejs
+++ b/views/page.ejs
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script>
         var vchainId = <%- vchainId %>;
+        var prismVersion = '<%- prismVersion %>';
         <% if (process.env.DISABLE_ANIMATIONS === 'true') { %>       
             var disableAnimations = true;
         <% } %>
